--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
         <!-- Title -->
         <title>BUKU TAHUNAN AKSANA 29 MAN KAPUAS TAHUN 2024</title>
 
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
         <!-- Font Google -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,6 +17,10 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
         <!-- My CSS -->
         <link rel="stylesheet" href="style/style.css">
@@ -88,7 +88,7 @@
                         <div class="card">
                             <img src="img/homepage/about/web.png" class="card-img-top" alt="foto angkatan 29">
                             <div class="card-body">
-                                <h5 class="card-title text-center fw-bold">Buku Angkatan</h5>
+                                <h5 class="card-title text-center fw-bold">Website Buku Angkatan</h5>
                                 <p class="card-text text-justify">
                                     Website Aksana 29 merupakan website yang dijadikan
                                     tempat bagaimana Angkatan 29 MAN
@@ -112,13 +112,13 @@
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item list-group-item-action">Ketua Angkatan : <b>Akhmad Rezky
                                             Utama</b></li>
-                                    <li class="list-group-item list-group-item-action">
+                                    <!-- <li class="list-group-item list-group-item-action">
                                         <div class="fw-bold">Struktur OSIM</div>
                                         <div>Ketua : <b>Muhamad Kemal Faza</b></div>
                                         <div>Wakil : <b>Muhammad Ridwan</b></div>
                                         <div>Sekretaris : <b>Intan Nurul Ain</b></div>
                                         <div>Bendahara : <b>Aisya Rahmah</b></div>
-                                    </li>
+                                    </li> -->
                                     <!-- <li class="list-group-item list-group-item-action">
                                         <div class="fw-bold">Ketua Ekskul</div>
                                         <div>Drum Band : <b>Nur Rahman Diva Yanda</b></div>
@@ -192,7 +192,7 @@
             <div class="container-fluid bg-dark text-white p-5">
                 <div class="row">
                     <div class="col-12 col-sm-6 text-justify">
-                        <h3>BUKU TAHUNAN ANGKATAN 29 (AKSANA 29) MAN KAPUAS TAHUN 2024</h3>
+                        <h3>WEBSITE BUKU TAHUNAN ANGKATAN 29 (AKSANA 29) MAN KAPUAS TAHUN 2024</h3>
                         <p>Website Buku Tahunan Aksana 29 merupakan website yang dijadikan
                             tempat bagaimana Angkatan 29 MAN
                             Kapuas bercerita, bernostalgia, dan bertukar informasi satu sama lain nya dalam
@@ -203,7 +203,7 @@
                             (fisik) yang sekarang bisa diakses dengan mudahnya secara digital (online)
                         </p>
                     </div>
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6 text-end">
                         <p>
                             Copyright © 2024
                             <br>
