--- a/pesdik/dua-belas-ips-3.html
+++ b/pesdik/dua-belas-ips-3.html
@@ -121,7 +121,7 @@
             <div class="container-fluid bg-dark text-white p-5">
                 <div class="row">
                     <div class="col-12 col-sm-6 text-justify">
-                        <h3>BUKU TAHUNAN ANGKATAN 29 (AKSANA 29) MAN KAPUAS TAHUN 2024</h3>
+                        <h3>WEBSITE BUKU TAHUNAN ANGKATAN 29 (AKSANA 29) MAN KAPUAS TAHUN 2024</h3>
                         <p>Website Buku Tahunan Aksana 29 merupakan website yang dijadikan
                             tempat bagaimana Angkatan 29 MAN
                             Kapuas bercerita, bernostalgia, dan bertukar informasi satu sama lain nya dalam
@@ -132,7 +132,7 @@
                             (fisik) yang sekarang bisa diakses dengan mudahnya secara digital (online)
                         </p>
                     </div>
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6 text-end">
                         <p>
                             Copyright © 2024
                             <br>
