--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <section class="about mt-3">
             <div class="container">
                 <div class="row justify-content-center text-center">
-                    <div class="col-6">
+                    <div class="col-11 col-sm-10 col-md-8 col-sm-6">
                         <h1 data-aos="fade-up" data-aos-duration="1000">Tentang</h1>
                         <hr>
                     </div>
@@ -158,13 +158,15 @@
                 </div>
             </div>
             <div class="row justify-content-center text-center my-3">
-                <div class="col-6">
+                <div class="col-11 col-sm-10 col-md-8 col-sm-6">
                     <h1 data-aos="fade-up" data-aos-duration="1000">Sambutan-sambutan</h1>
                     <hr>
                 </div>
             </div>
-            <div class="swiper">
+            <div class="swiper" data-aos="fade-up" data-aos-duration="1000">
                 <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="container">
@@ -178,7 +180,7 @@
                                                         class="img-thumbnail">
                                                 </div>
                                             </div>
-                                            <h5 class="card-title text-center fw-bold">Sambutan KH. Parhani
+                                            <h5 class="card-title text-center fw-bold">KH. Parhani
                                             </h5>
                                             <p class="card-text text-justify">
                                                 Assalamualaikum warahmatullahi wabarakatuh.
@@ -238,11 +240,11 @@
                                                         class="img-thumbnail">
                                                 </div>
                                             </div>
-                                            <h5 class="card-title text-center fw-bold">Sambutan Ahmad Mulyadi,
+                                            <h5 class="card-title text-center fw-bold">Ahmad Mulyadi,
                                                 S.Ag., M.Pd.
                                             </h5>
                                             <p class="card-text text-justify">
-                                                Assalamu 'alaikum warahmatullahi wabarakatuh,
+                                                Assalamu'alaikum warahmatullahi wabarakatuh,
                                                 <br>
                                                 Anak sekalian yang di rahmati Allah SWT Pertama dulu saya ucapkan
                                                 selamat kepada angkatan ke -29 Siswa MAN Kapuas tahun 2024 atas prestasi
@@ -311,7 +313,7 @@
                                                         class="img-thumbnail">
                                                 </div>
                                             </div>
-                                            <h5 class="card-title text-center fw-bold">Sambutan Hj. Jumirah, S.Pd.
+                                            <h5 class="card-title text-center fw-bold">Hj. Jumirah, S.Pd.
                                             </h5>
                                             <p class="card-text text-justify">
                                                 Assalamualaikum warahmatullahi wabarakatuh,
@@ -321,22 +323,23 @@
                                                 ini bisa menjadi contoh yang baik untuk adik adik kelasnya.
                                                 <br>
                                                 <br>
-                                                Anak -anakku sekalian, walaupun Ibu berat untuk melepas sekalian tapi
+                                                Anak-anakku sekalian, walaupun Ibu berat untuk melepas sekalian tapi
                                                 demi masa depan silahkan lanjutkan kependidikan yang lebih tinggi untuk
                                                 meraih masa depan yang cemerlang.
                                                 <br>
                                                 <br>
-                                                Sedangkan pesan dari ibu untuk anak -anakku semuanya, yang pertama,
+                                                Sedangkan pesan dari ibu untuk anak-anakku semuanya, yang pertama,
                                                 teruslah belajar, karena belajar tidak hanya di sekolah, belajar bisa di
                                                 luar sekolah, belajar itu sepanjang hayat untuk mendapat ilkan ilmu yang
-                                                bermanfaat di dunia maupun diakhirat.
+                                                bermanfaat di dunia maupun di akhirat.
                                                 <br>
                                                 <br>
                                                 Pesan yang kedua, teruslah berkaya, sekecil apapun karya kita itu lebih
-                                                baik daripada diam dengan potensi yang kita miliki untuk meraih cita
-                                                -cita. Anak -anakku sekalian, pesan yang selanjutnya, jadilah pribadi
-                                                penebar manfaat, jadilah pribadi yang mampu menebar manfaat untuk orang
-                                                banyak, karena sebaik -baik manusia adalah yang bermanfaat untuk orang
+                                                baik daripada diam dengan potensi yang kita miliki untuk meraih
+                                                cita-cita. Anak-anakku sekalian, pesan yang selanjutnya, jadilah
+                                                pribadi penebar manfaat, jadilah pribadi yang mampu menebar manfaat
+                                                untuk orang banyak, karena sebaik -baik manusia adalah yang bermanfaat
+                                                untuk orang
                                                 banyak.
                                                 <br>
                                                 <br>
@@ -374,7 +377,7 @@
                                                         class="img-thumbnail">
                                                 </div>
                                             </div>
-                                            <h5 class="card-title text-center fw-bold">Sambutan H. Paidi, S.Pd.
+                                            <h5 class="card-title text-center fw-bold">H. Paidi, S.Pd.
                                             </h5>
                                             <p class="card-text text-justify">
                                                 Assalamualaikum warahmatullahi wabarakatuh, para siswa siswi man
