--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <!-- 100% privacy-first analytics -->
         <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-        <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+        <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt=""
+                referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -167,9 +168,9 @@
                 </div>
             </div>
             <div class="swiper sambutan-container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="sambutan-pagination"></div>
-                <div class="sambutan-button-prev"></div>
-                <div class="sambutan-button-next"></div>
+                <div class="swiper-pagination sambutan-pagination"></div>
+                <div class="swiper-button-prev sambutan-button-prev"></div>
+                <div class="swiper-button-next sambutan-button-next"></div>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="row">
@@ -435,9 +436,9 @@
                     </div>
                 </div>
                 <div class="swiper gallery-container">
-                    <div class="gallery-pagination"></div>
-                    <div class="gallery-button-prev"></div>
-                    <div class="gallery-button-next"></div>
+                    <div class="swiper-pagination gallery-pagination"></div>
+                    <div class="swiper-button-prev gallery-button-prev"></div>
+                    <div class="swiper-button-next gallery-button-next"></div>
                     <div class="swiper-wrapper" id="gallery-card">
 
                     </div>
@@ -450,26 +451,6 @@
             </svg>
         </section>
         <!-- Section Gallery End-->
-
-        <!-- Modal Start -->
-        <div class="modal fade" id="galleryModal" tabindex="-1" aria-labelledby="galleryModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="galleryModalLabel"></h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <img src="" alt="" class="img-fluid">
-                    </div>
-                    <div class="modal-footer">
-                        <a href="" id="download-image" type="button" class="btn btn-primary" download>Download</a>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Modal End -->
 
         <!-- Footer Start -->
         <footer>
