--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Website Aksana 29 merupakan website yang dijadikan
+        tempat bagaimana Angkatan 29 MAN
+        Kapuas bercerita, bernostalgia, dan bertukar informasi satu sama lain nya dalam
+        rangka mempererat tali ukhuwah silaturahmi antar sesama alumni MAN Kapuas tahun
+        ajaran 2023/2024. Website ini juga menjadi bukti kemajuan tekonlogi yang menggantikan buku angkatan
+        (fisik) yang sekarang bisa diakses dengan mudahnya secara digital (online)">
+        <meta name="keywords" content="aksana 29, aksana, man kapuas, man, kapuas, perpisahan, graduation, 2024">
+        <meta name="author" content="Muhamad Kemal Faza">
 
         <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
